--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "react-transition-group": "4.4.2"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
